Add a ploting of data and regression line.

--- a/Regressão Linear.ipynb
+++ b/Regressão Linear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "4  centro-oeste                   12.4                         25.41"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "0.97249677887347097"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -176,12 +176,12 @@
     "    def find(x):\n",
     "        return a * x + b\n",
     "    \n",
-    "    return find"
+    "    return a, b, find"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "4  centro-oeste                   12.4                         25.41"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -274,25 +274,48 @@
        "8.92828842994723"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_y_with_linear_regression = regressao_linear(taxa_de_mortalidade_infantil, taxa_de_analfabetismo, len(taxa_de_analfabetismo))\n",
+    "a, b, predict_y_with_linear_regression = regressao_linear(taxa_de_mortalidade_infantil, taxa_de_analfabetismo, len(taxa_de_analfabetismo))\n",
     "predict_x = 24\n",
     "predict_y_with_linear_regression(predict_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEKCAYAAAAfGVI8AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xd8VfX9x/HXh02YMmSHMGQvIYC7iFtxYV2larWKnbbW\nn4IiKiqK1lFbrUrVqhW1yhIRJ+JWFFCSEDYCsvcMgYzP749zYiMm4YK5uTe57+fjkcc9855PvoH7\nuef7PedzzN0REZHEVSnWAYiISGwpEYiIJDglAhGRBKdEICKS4JQIREQSnBKBiEiCUyIQEUlwSgQi\nIglOiUBEJMFViXUAkWjUqJGnpKTEOgwRkXJl9uzZm9y98YG2KxeJICUlhVmzZsU6DBGRcsXMVkSy\nnbqGREQSnBKBiEiCUyIQEUlwSgQiIglOiUBEJMEpEYiIJDglAhGRBKdEICISh7bu3seo1+exIzsn\n6scqFzeUiYgkCndnWvo6bp+SwbasHI5t14iTuzSJ6jGVCERE4sT6HdmMnJzBO5nr6d6iHv/5dX86\nN6sb9eMqEYiIxJi788qs77j7jfnsy83n5jM68evj2lClctn03kctEZhZDeAjoHp4nPHufruZNQD+\nC6QAy4GL3H1rtOIQEYlnKzdncfOkND5dspl+bRpw3wU9aNOoVpnGEM0zgr3AQHffZWZVgU/M7E1g\nMDDd3ceY2XBgODAsinGIiMSdvHzn2c+W88DbC6lcybj7vG78ol8ylSpZmccStUTg7g7sCmerhj8O\nnAsMCJc/B3yAEoGIJJBF63cybEIaX6/cxokdGzP6/O40r18zZvFEdYzAzCoDs4H2wGPuPtPMmrj7\n2nCTdUB0h8NFROLEvtx8nvhwKf94fzG1q1fhkUt6cU7P5piV/VlAYVFNBO6eB/Qys/rAJDPrtt96\nNzMval8zGwoMBUhOTo5mmCIiUTf3u20Mm5DGgnU7Obtnc+44uwsNa1ePdVhAGV015O7bzGwGcDqw\n3syauftaM2sGbChmn7HAWIDU1NQik4WISLzbsy+Ph99bxFMfL6Nxner86/JUTonyfQEHK2rXJplZ\n4/BMADOrCZwCLACmAFeEm10BvBatGEREfrJx4yAlBSpVCl7HjYt418+XbuaMRz5i7EfLuLhvMu9c\n/7O4SwIQ3TOCZsBz4ThBJeAVd59qZp8Dr5jZr4EVwEVRjEFE5NCNGwdDh0JWVjC/YkUwDzBkSLG7\n7czO4d43F/DizJW0bpjEi9f055h2jcog4ENjwcU98S01NdX1zGIRKXMpKcGH//5at4bly4vc5f0F\n67llYgYbdmbz6+Pa8JdTOlKzWuWohlkcM5vt7qkH2k53FouIFGflyoiXb961lzunZvLaN2vo2KQO\nT1zWh16t6kc5wNKhRCAiUpzk5KLPCApdyejuTJm7hlGvZ7IzO4frT+7Abwe0o1qV8lPcWYlARKQ4\no0f/cIwAICkpWA6s3b6HkZMzeG/+Bnq2qs/9F/SgY9M6MQr20CkRiIgUp2BAeMSIoDsoORlGjyb/\n0l/w8syV3DttPjn5+dx6VmeuPLYNlWNQHqI0KBGIiJRkyJAfXCG0fNNuhj/1BV8s28LRbRsy5oLu\ntG5YtkXiSpsSgYhIBPLynWc++ZYH311I1UqVGDO4Oxf3bRXz8hClQYlAROQAFq7byU3j5zJ31XZO\n7tyEu8/rRtN6NWIdVqlRIhARKcbe3Dwem7GUf85YQr2aVfnHpUcyqEezCnEWUJgSgYhIEb5euZVh\nE9JYtH4X5x/ZgpGDutCgVrVYhxUVSgQiIoVk7cvlwXcW8cyn39K0bg2e+VUqAzvFX32g0qREICIS\n+mzJJoZPTGflliyG9E9m+BmdqFOjaqzDijolAhFJeNv35HDvtPm8/NV3pDRM4uWhR3FU24axDqvM\nKBGISEJ7N3M9t05OZ+POvVz7s7Zcf3IHalSNTZG4WFEiEJGEtGnXXu6YMo+paWvp1LQO/7o8lR4t\ny0eRuNKmRCAiCcXdmfzNaka9nknW3jxuOKUD1/6sfBWJK21KBCKSMNZs28OISenMWLiRI5ODInFH\nNCl/ReJKmxKBiFR4+fnOi1+uZMybC8jLd24b1IUrjkkpt0XiSpsSgYhUaN9u2s2wCWl8+e0Wjmvf\niHsHd6dVg6RYhxVXlAhEpELKzcvnqU++5eF3F1GtSiXuv6AHF6a2rHDlIUqDEoGIVDiZa3YwbEIa\n6au3c2qXJtx1Xjea1K04ReJKmxKBiFQYe3PzePT9JTz+wVLqJ1XlsV/05szuTXUWcABKBCJSIcxe\nERSJW7JhF4N7t2DkWV04rIIWiSttSgQiUq7t3pvLA+8s5NnPltOsbg3+fWVfTux4eKzDKleUCESk\n3Pp48UZunpjOqq17uPzo1tx0eidqV9fH2sFSi4lIubM9K4fR0zJ5ZdYq2jaqxSvXHk2/Ng1iHVa5\ndVCJwMyqAVXcPStK8YiIlOitjHWMfC2DLbv38bsB7bjupCMSrkhcaYs4EZjZlcAvgMpm9qm7j4xe\nWCIiP7Rx515un5LBtPR1dGlWl3//qi/dWtSLdVgVQrGJwMzOdPdphRad5u6nhOvmAkoEIhJ17s7E\nOau5c2ome3LyuPG0jgw9oS1VKydukbjSVtIZQV8zuwYY6e4ZwDwzexLIBxaUSXQiktBWbc3ilkkZ\nfLRoI31aH8Z9F/Sg/eG1Yx1WhVNsInD3UWbWHLjLzHKA24AGQJK7zymrAEUk8eTnOy/MXMF9by7A\ngVHndOWyo1pTSUXiouJAYwRbgd8BXYFngM+AB6MdlIgkrqUbdzF8QhpfLd/K8Uc04p7zVSQu2koa\nIxgFHBduM97dB5nZYGCamT3t7i+WVZAiUvHl5OXzr4+X8bf3FlOzamUeuLAnF/RuofIQZaCkM4Jz\n3b2XBX+F2cA/3H2imb0OXFc24YlIIshYvZ1hE9KYt2YHZ3Rryqhzu3J4HRWJKyslJYL5ZvZPIAn4\npGChu+eg7iERKQXZOXn84/3FPPHhMg5LqsbjQ3pzRvdmsQ4r4ZQ0WHypmR0J5IRXDR0UM2sFPA80\nARwY6+6PmNkdwDXAxnDTW/a7TFVEEsCs5Vu4aUIayzbu5ud9WnLrWZ2pn6QicbFQ4mCxu3/9E947\nF7jB3eeYWR1gtpm9G6572N0f+AnvLSLl1O69udz/1gKe/2IFzevV5Pmr+nFCh8axDiuhRa3WkLuv\nBdaG0zvNbD7QIlrHE5H49+GijdwyMZ012/dwxdEp3HhaR2qpSFzMlclfwMxSgCOBmcCxwB/N7HJg\nFsFZw9ayiENEYmNb1j7umjqfCXNW0a5xLV699mhSU1QkLl5ElAjM7EzghHD2Q3d/M9IDmFltYALw\nZ3ffYWaPA3cRjBvcRTDwfFUR+w0FhgIkJydHejgRiTPT0tdy22sZbM3K4Q8ntucPA9urSFycMXcv\neQOz0QTf4gvuG7gE+Mzdbz3gm5tVBaYCb7v7Q0WsTwGmunu3kt4nNTXVZ82adaDDiUgc2bAjm9te\nm8db89bRrUVd7rugB12bq0hcWTKz2e6eeqDtIjkjOBs40t3zwjd+BpgDlJgIwvsPngbmF04CZtYs\nHD8AOB846CuSRCR+uTuvzl7F3VMzyc7NZ9jpnbjm+DZUUZG4uBXpGEFdgnITAHUi3OdY4DIg3cy+\nCZfdAlxqZr0IuoaWA9dG+H4iEue+25LFLZPS+XjxJvqlNGDMBd1p21hF4uJdJIngfmCOmU0HDBhA\nBCWo3f2TcPv96Z4BkQomL995/vPl/PXthRhw13ndGNIvWUXiyokDJgJ3f8HMZgD9w0W3ufvq6IYl\nIuXFkg07uWl8GnNWbmNAx8aMPr87LerXjHVYchAi7RqqB2SH2/cxsz7uPiV6YYlIvMvJy+fJD5fy\n9+lLSKpemYcv7sl5vVQkrjw6YCIws38BqUAmwUNpIOjfVyIQSVDpq7Zz04Q05q/dwVk9mjHqnK40\nql091mHJIYrkjOA4oIsf6DpTEanwsnPy+Nt7i/nXx8toWKsaT17Wh9O6No11WPITRZIIZgIdgIVR\njkVE4tjMZZsZPjGdbzft5uLUVtxyVmfq1awa67CkFESSCJ4GZprZamAvwZVA7u69oxqZiMSFndk5\n3P/WQv7zxQpaNajJuKv7c2z7RrEOS0pRJIngGYISEOn8b4xARBLAjIUbGDExnbU7srnq2Db832kd\nSKqmInEVTSR/0c3uPjHqkYhI3Ni6ex93Tc1k4terOeLw2kz47TH0Tj4s1mFJlESSCGaZ2fPA6wRd\nQwDo8lGRisfdeSN9Lbe/No/te3K4bmB7fj+wPdWrqEhcRRZJIiioEnVOoWW6fFSkglm/I5tbJ2fw\nbuZ6erSsxwtX96dzs7qxDkvKQCR3Fl9WFoGISGy4O6/M+o6735jPvtx8RpzZmSuPTVGRuAQSyQ1l\n9wL3AlnAG0Av4Hp3f7HEHUUk7q3cnMXwiWl8tnQz/ds04L4LepDSqFasw5IyFknX0BnufrOZnUfw\n6MlLgRn87/kEIlLO5OU7z362nAfeXkjlSsY953fnkr6tVCQuQUWSCAq2ORN4xd23mJnuMhYppxat\nD4rEffPdNgZ2OpzR53ejWT0ViUtkkSSCN80sA8gDfm9mjSh09ZCIlA/7cvN5/IOlPDpjMXVqVOWR\nS3pxTs/mKhInEQ0W32hmfwW2uHuumWUDg6MfmoiUlrnfbWPYhDQWrNvJub2ac9ugLjRUkTgJFZsI\nzOxn7v6hmZ1TaFnhTfRMApE4t2dfHg+/t4inPl7G4XVq8NTlqZzcpUmsw5I4U9IZwSnAh8CFRazT\nfQQice7zpZsZPjGNFZuz+EX/ZIaf0Ym6NVQkTn6s2ETg7gUPpx/h7isLrzOz5KhGJSKHbEd2DvdO\nW8BLX66kdcMkXrymP8e0U5E4KV4kg8WTgf0rjRa1TERibPr89YyYlMGGndkMPaEt15/cgZrVVB5C\nSlbSGEEHoDNQr/A4AVAXqBHtwEQkcpt37WXU65lMmbuGTk3r8ORlfejZqn6sw5JyoqQzgq4EVwfV\n54fjBDuBa6MZlIhExt2ZMncNo17PZGd2Dtef3IHfDmhHtSoqDyGRK2mMYBIwycyOc/dPyjAmEYnA\n2u17uHVSBtMXbKBXq/rc//MedGhSJ9ZhSTkUyRjBOjN7G2jq7j3NrAdwlrvfG+XYRKQI+fnOS1+t\n5N5pC8jNz+fWszpz5bFtqKzyEHKIIkkETwG3AI+F8+nASwSF6ESkDC3ftJvhE9P4YtkWjmnXkDGD\ne5DcMCnWYUk5F0kiqOXunxXcTObubmY50Q1LRArLzcvnmU+/5cF3FlGtciXGDO7OxX1bqTyElIqI\nHlVpZm0IbiIjrEK6LqpRicj3FqzbwbDxacxdtZ2TOx/O3ed1p2k9XbgnpSeSRPAH4Gmgk5mtIChF\nfUlUoxIR9ubm8diMpfxzxhLq1qzK3y89krN7NNNZgJS6SIrOLQEGmlk9wNx9W/TDEklsX6/cyrAJ\naSxav4vzejXntrO70qBWtViHJRVUJE8oOwwYCRwHuJl9Atzt7lujHZxIosnal8uD7yzimU+/pWnd\nGjzzq1QGdlKROImuSLqGXga+AIaE878A/gucGq2gRBLRZ0s2MXxiOiu3ZPHLo5IZdnon6qhInJSB\nSBJBC3e/vdD8qPBBNSJSCrbvyeHeafN5+avvaNOoFi8PPYqj2jaMdViSQCJJBNPN7OfuPh7AzAYD\n70Y3LJHE8M68ddw6OYNNu/Zy7Qltuf6UDtSoqiJxUrZKKjq3leCSUQP+WOjegarANuD66IcnUjFt\n2rWXO6bMY2raWjo1rcNTV6TSo6WKxElslHRG8JMKmJtZK+B5oAlBQhnr7o+YWQOCMYYUYDlwkQae\nJVG4O5O/Wc2o1zPJ2pvHDad04DcD2lG1sorESeyUVHQur2A6vHS0HT8sP/3ZAd47F7jB3eeYWR1g\ntpm9C/wKmO7uY8xsODAcGHaI8YuUG2u27WHEpHRmLNzIkcn1uf+CHhyhInESByK5fPTXwF+AFgR1\nhvoSXEU0oKT93H0twc1nuPtOM5sfvse5hfZ9DvgAJQKpwPLznXFfruS+NxeQl+/cfnYXLj86RUXi\nJG5EMlj8ZyAV+NzdjzezrsCdB3MQM0sBjgRmAk3CJAFBqQpdJC0V1rKNuxg+IZ0vl2/huPaNuHdw\nd1o1UJE4iS+RJIJsd99jZphZNXefZ2YdIz2AmdUGJgB/dvcdhW+PDwvYeTH7DQWGAiQn6xHJUr7k\n5uXz1Cff8vC7i6hepRL3/7wHF/ZpqfIQEpciSQRrzaw+8DrwtpltAVZF8uZmVpUgCYxz94nh4vVm\n1szd15pZM2BDUfu6+1hgLEBqamqRyUIkHmWu2cFNE+aSsXoHp3Vtwl3nduPwuioSJ/GrpMtHk919\npbsXPK94pJmdBNQD3jjQG1vw1edpYL67P1Ro1RTgCmBM+PraoQYvEk+yc/J49P0lPPHhUuonVePx\nIb05o3uzWIclckAlnRFMAvqY2TvufiqAu08/iPc+FrgMSDezb8JltxAkgFfCQegVwEUHH7ZIfJm9\nYgvDJqSzZMMuLujdkpGDOlM/SUXipHwoKRFUNrObgM5mdt3+K9397yW9cfic4+I6RE+KPESR+LV7\nby5/fXshz32+nOb1avLslX0Z0PHwWIclclBKSgSXAoPDbRqXTTgi5cfHizdy88R0Vm3dwxVHt+bG\n0ztRu3okw24i8aWkG8rmA6PNLM3dXy/DmETi2vasHO5+I5NXZ6+ibeNavPqbo+mb0iDWYYkcspIG\ni68rarrAgbqGRCqitzLWMfK1DLbs3sfvBrTjupOOUJE4KfdKOo9Vd5BIaOPOoEjcG+lr6dKsLv/+\nVV+6tagX67BESkVJXUMjyzIQkXjk7kycs5o7p2ayJyePG0/ryNAT2qpInFQokdQaqk5QKK4rhYrO\nufvQ6IUlEnurtmZxy6QMPlq0kT6tD+O+C3rQ/vDasQ5LpNRFconD88AyYBAwmuBRlfOiGZRILOXn\nO//5YgX3vbUAgFHndOWyo1pTSUXipIKKJBF0cPeLzewsd3/azJ4HPo52YCKxsHTjLoaNT2PWiq0c\nf0Qj7jlfReKk4oskERQ8mWybmXUG1gO6Y0YqlJy8fMZ+tIxHpi+mZtXKPHBhTy7o3UJF4iQhRJII\nnjazw4DbgbeBpHBapELIWL2dYRPSmLdmB2d2b8od53Tl8DoqEieJ44CJwN2fDCdnAKoHLRVGdk4e\nf5++mCc/WsZhSdV44pe9Ob2bisRJ4onkqqFqwHkEzxj+fnt3vyd6YYlE16zlW7hpQhrLNu7mwj4t\nufWsLtRLqhrrsERiIpKuoUlANjAbyDvAtiJxbdfeXP761gKe/2IFLerX5D+/7sfxR+jeSUlskSSC\n1u7eLeqRiETZh4s2csvEdNZs38MVR6dw42kdqaUicSIRJYIvzKyLu2dGPRqRKNiWtY87p2Yycc5q\n2jWuxfjfHE2f1ioSJ1IgkkTQH/jazJYAewmeMeDu3juqkYmUgmnpa7nttQy2ZeXwx4Ht+cPA9lSv\noiJxIoVFkgjOi3oUIqVsw45sRr6Wwdvz1tO9RT2ev6o/XZrXjXVYInEpkstHlwKYWQMK1RoSiUfu\nzquzV3H31Ez25uYz/IxOXH1cG6qoSJxIsSK5fPQs4GGgJbAZaA4sBjpFNzSRg/PdlixunpjOJ0s2\n0S+lAWMu6E7bxioSJ3IgkXQNjSZ4EP077n6kmZ2CHjgvcSQv33n+8+Xc/9ZCKhncdV43hvRLVpE4\nkQhFkghy3X2jmVUyM3P3d83sgahHJhKBJRt2ctP4NOas3MaAjo0ZfX53WtSvGeuwRMqVSBLBdjOr\nDXwCPG9mG4A90Q1LpGQ5efk8+eFS/j59CbWqV+bhi3tyXi8ViRM5FJFeNbQH+DNwOVAPODuaQYmU\nJH3Vdm4cP5cF63YyqEcz7jinK41qV491WCLlViRXDe0MJ/OAp6MbjkjxsnPy+Nt7i/nXx8toWKsa\nYy/rw6ldm8Y6LJFyT/fXS7kwc9lmhk9M59tNu7mkbytuPrMz9WqqSJxIaVAikLi2MzuH+95awAtf\nrKRVg5qMu7o/x7ZvFOuwRCqUiBJBWIo62d2XRDkeke/NWLiBERPTWbsjm18f14YbTu1AUjV9dxEp\nbZHeUPYQUA1oY2a9gNvd/fxoByeJacvufdw1NZNJX6/miMNrM+G3x9A7+bBYhyVSYUXy9epOgsJz\nMwDc/Rszax/VqCQhuTtvpK/l9tfmsX1PDtcNbM/vVSROJOoieni9u2/b7/psj1I8kqDW78jm1skZ\nvJu5nh4t6/HC1f3p3ExF4kTKQiSJYL6ZXQRUMrM2wHXAF9ENSxKFu/PKrO+4+4357MvNZ8SZnbny\n2BQViRMpQ5Ekgj8AtwH5BI+tfBsYEc2gJDGs3JzF8IlpfLZ0M/3bNOC+C3qQ0qhWrMMSSTiR3FC2\nGxgW/oj8ZHn5zr8//ZYH31lE5UrGPed355K+rVQkTiRGik0EZjaJEsYC3H1wVCKSCm3R+qBI3Dff\nbeOkTodz9/ndaFZPReJEYqmkM4JHw9dzCZ5BMC6cvxRYc6A3NrNngEHABnfvFi67A7gG2Bhudou7\nTzv4sKW82Zebz+MfLOXRGYupU6Mqj1zSi3N6NleROJE4UGwicPfpAGZ2n7unFiw3s8nAlxG897ME\nyeT5/ZY/7O4qY51A5n63jWET0liwbifn9mrObYO60FBF4kTiRiSDxbXNLMXdl4fzycABH/vk7h+Z\nWcqhhybl3Z59eTz83iKe+ngZh9epwVOXp3JylyaxDktE9hNJIrgB+NjMFgIGtAd+8xOO+UczuxyY\nBdzg7lt/wntJnPp86WaGT0xjxeYsLu2XzM1ndqJuDRWJE4lHkVw19IaZdQC6hIsy3f1QH0zzOHAX\nwSD0XcCDwFVFbWhmQ4GhAMnJyYd4OClrO7JzuHfaAl76ciWtGybx0jVHcXS7hrEOS0RKEFEFr/CD\nf/ZPPZi7ry+YNrN/AVNL2HYsMBYgNTVVdzKXA9Pnr2fEpAw27Mxm6Altuf7kDtSspvIQIvGuTEs5\nmlkzd18bzp4PZJTl8SU6Nu/ay6jXM5kydw0dm9Thicv60KtV/ViHJSIRiloiMLOXgAFAIzNbBdwO\nDAirlzqwHLg2WseX6HN3psxdw6jXM9mZncP1J3fgtwPaUa2KykOIlCeRPo+gHtAOqFGwzN0/K2kf\nd7+0iMV61GUFsXb7Hm6dlMH0BRvo2ao+91/Qg45N68Q6LBE5BJE8j+AqgiuHWgDpQF+ConMDohqZ\nxKX8fOelr1Zy77QF5Obnc+tZnbny2DZUVnkIkXIrkjOC64FU4HN3P97MuhI8o0ASzLebdjN8Qhoz\nv93CMe0acu/g7rRuqCJxIuVdJIkg2933mBlmVs3d55lZx6hHJnEjNy+fZ8IicdUqV2LM4O5c3LeV\nykOIVBCRJIK1ZlYfeB1428y2AKuiG5bEi/lrdzBsQhppq7Zzcucm3H1eN5rWq3HgHUWk3IjkhrJz\nwsmRZnYSUA94I6pRScztzc3jsRlL+eeMJdSrWZV/XHokg3o001mASAUUyWDxAHf/AH5QiG4I/6tG\nKhXMnJVbGTY+jcUbdnH+kS0YOagLDWpVi3VYIhIlkXQNjTazOcBNBMXmxhLUHFIiqGCy9uXy4DuL\neObTb2latwb//lVfTux0eKzDEpEoiyQRHE+QBL4GKgN3uvt/ohqVlLlPl2xi+MQ0vtuyh18elcyw\n0ztRR0XiRBJCJImgLtCTYIC4OdDEzMzdVf+nAti+J4d7p83n5a++o02jWvx36FH0b6sicSKJJJJE\n8CXwgLuPNbNawF+Bj4HjohqZRN0789Zx6+QMNu/ex7U/C4rE1aiqInEiiSaSRHBqwUNpwgfZ/87M\nBkY1KomqTbv2cseUeUxNW0vnZnV5+oq+dG9ZL9ZhiUiMRHL56PIiag1lRzUqiQp3Z/I3qxn1eiZZ\ne/P4v1M7cO3P2lG1sorEiSSyA34ChLWGPgPeB+4LX++JclxSytZs28NVz37F9f+dS9tGtZj2p+P4\nw8AjyjYJjBsHKSlQqVLwOk4XnonEA9UaquDy851xX65kzLT5OHDH2V247OiUsi8SN24cDB0KWVnB\n/IoVwTzAkCFlG4uI/EAkXwezCx5NWVBrCFCtIYj7b7jLNu7ikrFfMHJyBr1bH8bbfz6BX8WqUuiI\nEf9LAgWysoLlIhJTxZ4RmFkVd89FtYaKFsffcHPz8nnqk295+N1FVK9Sib/+vAc/79MytuUhVq48\nuOUiUmasuNsBzGyOu/feb9n3tYbcfW8ZxAcEzyyeNWtWWR0uMikpwYf//lq3huXLyzqa72Wu2cFN\nE+aSsXoHp3dtyp3ndeXwOnFQJC5O20ukIjOz2e6eeqDtShoj+NHXx4JaQ0LcfcPdm5vHo+8v4fEP\nllI/qRqPD+nNGd2bxSSWIo0e/cMzKICkpGC5iMRUSYmgsZn9pbiV7v5QFOIpP5KTi/6Gm5xc5qHM\nXrGFm8ansXTjbi7o3ZKRgzpTPynOisQVdJeNGBEky+TkIAlooFgk5kpKBJUJisyp7nBR4uAb7u69\nufz17YU89/lymteryXNX9eNnHRqX2fEP2pAh+uAXiUMlJYK17q7LRIsT42+4Hy3ayM0T01mzfQ9X\nHJ3C/53WkdrVI7kaWETkhw5qjED2E4NvuNuzcrjrjUzGz15F28a1ePXao0lNaVCmMYhIxVJSIjip\nzKKQiLyVsZaRr81jy+59/P7Edvxx4BEqEiciP1mxicDdt5RlIFK8DTuzuWPKPKalr6Nr87o8e2Vf\nujZXkTgRKR3qVI5j7s7EOau5c2ome3LyuOn0jlxzfFsViRORUqVEEKdWbc3ilkkZfLRoI31TDmPM\nBT1o17h2rMMSkQpIiSDO5Oc7L8xcwX1vLgBg1Dldueyo1lSKRX0gEUkISgRxZOnGXQyfkMZXy7dy\nQofG3HN+N1oelhTrsESkglMiiAM5efmM/WgZj0xfTM2qlXnwwp4M7t0itkXiRCRhKBHEWMbq7Qyb\nkMa8NTtis5YgAAANRElEQVQ4s3tTRp3TjcZ1qsc6LBFJIEoEMZKdk8ffpy/myY+W0aBWNZ74ZW9O\n7xZHReJEJGEoEcTAV8u3MGxCGss27ubCPi259awu1EuqGuuwRCRBKRGUoV17c7n/rQU8//kKWh5W\nk//8uh/HHxHHReJEJCEoEZSRDxdt5JawSNyvjknhxtM6UktF4kQkDkTtk8jMngEGARvcvVu4rAHw\nXyAFWA5c5O5boxVDPNiWtY87p2Yycc5q2h9em/G/OYY+rQ+LdVgiIt+LZq2CZ4HT91s2HJju7kcA\n08P5CsndmZa+lpMf+pAp36zhjwPb88Z1xykJiEjcidoZgbt/ZGYp+y0+FxgQTj8HfAAMi1YMsbJh\nRzYjX8vg7Xnr6d6iHs9f1Z8uzevGOiwRkSKVdSd1E3dfG06vA5qU8fGjyt15dfYq7p6ayd7cfIaf\n0Ymrj2tDFRWJE5E4FrPRSnd3M/Pi1pvZUGAoQHIMngN8sL7bksXNE9P5ZMkm+rVpwJjB3WmrInEi\nUg6UdSJYb2bN3H2tmTUDNhS3obuPBcYCpKamFpswYi0v33n+8+Xc/9ZCKlcy7j6vG7/ol6wicSJS\nbpR1IpgCXAGMCV9fK+Pjl6rF63cybEIac1ZuY0DHxtxzfnea168Z67BERA5KNC8ffYlgYLiRma0C\nbidIAK+Y2a+BFcBF0Tp+NOXk5fPEB0v5x/tLqFW9Mn+7uBfn9mquInEiUi5F86qhS4tZVa6fhZy+\najs3jp/LgnU7GdSjGXec05VGtVUkTkTKL93aGqHsnDwefm8R//poGY3rVGfsZX04tWvTWIclIvKT\nKRFE4Itlmxk+IY3lm7O4tF8rhp/RmXo1VSRORCoGJYIS7MzOYcybCxg3cyXJDZJ48er+HNO+UazD\nEhEpVUoExZixYAO3TEpn/Y5srj6uDX85tQNJ1dRcIlLx6JbX/WzZvY8/v/w1Vz77FXVqVGHCb4/h\n1kFdfpwExo2DlBSoVCl4HTcuFuGKiPxk+oobcndeT1vLHVPmsTM7hz+ddAS/P7E91aoUkSvHjYOh\nQyErK5hfsSKYBxgypOyCFhEpBeYetzftfi81NdVnzZoVtfdftz2bWydn8N789fRsWY/7ft6DTk1L\nKBKXkhJ8+O+vdWtYvjxaYYqIHBQzm+3uqQfaLnG6horoynF3XvpyJac89CGfLNnIiDM7M/F3x5ac\nBABWrjy45SIicSwxuoaK6MrJv+Ya/jljCQ80SuWotg0YM7gHKY1qRfZ+yclFnxGUg+J4IiL7S4xE\nMGLE/5JAqNKePQwe/08avvMVl/RtdXDlIUaP/mFiAUhKCpaLiJQzidE1VEyXTbMdG7m0X/LB1wga\nMgTGjg3GBMyC17FjNVAsIuVSQpwReKtWWBHJwH5KV86QIfrgF5EKocKfEXzz3TbuO/5ysqrsVxhO\nXTkiIkAFTwT/mL6Ywf/8lMldBrDsnofUlSMiUoQK3TWU3DCJS/slM+yMTtStcRLc+LtYhyQiEncq\ndCI4t1cLzu3VItZhiIjEtQrdNSQiIgemRCAikuCUCEREEpwSgYhIglMiEBFJcEoEIiIJTolARCTB\nKRGIiCS4cvGEMjPbCSyMdRzlRCNgU6yDKAfUTpFRO0UmXtuptbs3PtBG5eXO4oWRPG5NwMxmqa0O\nTO0UGbVTZMp7O6lrSEQkwSkRiIgkuPKSCMbGOoByRG0VGbVTZNROkSnX7VQuBotFRCR6yssZgYiI\nREncJQIza2VmM8ws08zmmdmfwuUNzOxdM1scvh4W61hjycxqmNmXZjY3bKdR4XK1UxHMrLKZfW1m\nU8N5tdN+zGy5maWb2TdmNitcpnYqgpnVN7PxZrbAzOab2dHlua3iLhEAucAN7t4FOAr4vZl1AYYD\n0939CGB6OJ/I9gID3b0n0As43cyOQu1UnD8B8wvNq52KdqK79yp0KaTaqWiPAG+5eyegJ8G/rfLb\nVu4e1z/Aa8ApBDeUNQuXNSO4tyDm8cXDD5AEzAH6q52KbJ+WBP8xBwJTw2Vqpx+303Kg0X7L1E4/\nbqd6wLeEY6wVoa3i8Yzge2aWAhwJzASauPvacNU6oEmMwoobYXfHN8AG4F13VzsV7W/ATUB+oWVq\npx9z4D0zm21mQ8NlaqcfawNsBP4ddjc+ZWa1KMdtFbeJwMxqAxOAP7v7jsLrPEi5CX+5k7vnuXsv\ngm+8/cys237rE76dzGwQsMHdZxe3jdrpe8eF/57OIOiSPaHwSrXT96oAvYHH3f1IYDf7dQOVt7aK\ny0RgZlUJksA4d58YLl5vZs3C9c0IvgUL4O7bgBnA6aid9ncscI6ZLQdeBgaa2QuonX7E3VeHrxuA\nSUA/1E5FWQWsCs/AAcYTJIZy21ZxlwjMzICngfnu/lChVVOAK8LpKwjGDhKWmTU2s/rhdE2CcZQF\nqJ1+wN1vdveW7p4CXAK87+6/RO30A2ZWy8zqFEwDpwIZqJ1+xN3XAd+ZWcdw0UlAJuW4reLuhjIz\nOw74GEjnf326txCME7wCJAMrgIvcfUtMgowDZtYDeA6oTJDQX3H3O82sIWqnIpnZAOD/3H2Q2umH\nzKwtwVkABF0fL7r7aLVT0cysF/AUUA1YBlxJ+P+QcthWcZcIRESkbMVd15CIiJQtJQIRkQSnRCAi\nkuCUCEREEpwSgYhIglMikO+ZWcOw8uQ3ZrbOzFYXmq8W5WOfbGaTo3mMAxx/YFi070DbXW1mfwun\nf29mQ4rYpn1Y+uNgjv+CmZ13ENsXeez9tjEze8XM0szsuoOJJ9y/rZldUmi+v5k9HE5/3w777XNR\nWA33o4Lqm2Z2hJm9eLDHl7JTXh5eL2XA3TcTVDLFzO4Adrn7AzENqgyYWRWCgnSbgC8i3c/dH4ta\nUKVz7BZADw8qZB6KtgQ34b0cHnMmwf08JfkD0Cfc7xLgcWA05akSZwLSGYFExMxeD4uRzTOzq8Nl\nbcLa6w3CAnifmdnA4rYv4j3PMrOFZjYHOLfQ8tpm9qwFz1v42szOLmLfky14bsUUM1tmZneb2eVm\n9lX4DTilUIwzwmXvmlnLcPkLZva4mX0JvARcDdwYnv0cY2bnmtnM8PjvmNnhRcRwt5n9OZzuGx7j\nG+A3hbZpZ2Yfh+8z28z6h8srmdk/Lahn/y7QqNA+fc3sw3D7N83sR8XL9jv2J2Y2JmyvhWZ2TLjZ\nO0DrQr/Tb8L2mWtmr1pwR3pBWzwS/v2Wmdn54f5jgBPD/a+L8KwtH6hOUBE3x8xOBFa4+7ID7Cex\nFOvyp/qJzx/gDoK7cAvmG4SvSQS30x8Wzv+G4BvjzcBjB9q+0Pokgpot7QAjqC01OVx3P3BJOH0Y\nsAiosd/+JwNbCCo81iCo9nhbuO4G4IFw+k1gSDg9FBgfTr8ATAYqhfN3ExQ4pNBxrdDveF84fTXw\nt/33AeYBx4bTDwPfFPo9a4TTnYCZ4fRFYWyVCIoG7gDOI/gQ/YywHDQwBBhbxN+n8LE/KRTfOQR1\n8gHaF8QRzjcsND0G+G2htngp/Dv0ABYUauPJ+7X55P3bYb+4TgdmE5RbqAu8C9SP9b9n/ZT8o64h\nidT1ZnZOON2S4AN8lrs/YWYXEtxif+SBti+0vguwyN2XApjZOODycN2pwBlmVtCdUIPgtv1F+8U0\n093Xh/svA94Ol6cDR4fT/YFB4fTzwF2F9n/V3QuXpi4sGXjFzJoSfDjvf+zvmVkjoKa7fxou+g9w\nYjhdHXjUzHoSPHSpXbj8BOCl8PirzOyDcHlnoCtBOWgISoisKu7YhRQUZ5wNpBSzTQ8zuxOoD9QB\nphZaN9mDT/I0M2sRwfGK5O5vAW8BmNlVBPV2uprZ9QSJ+0/uvudQ31+iQ4lADsjMTib44DrK3feY\n2ScEH84F5cKbE3xg1QZ2l7R9pIcEzitIEiXYW2g6v9B8PpH9295dwrrHgHvcfVr4+xxqH/cNwHfA\nL4GqwK4DbG9Amrsff5DHKfjd8yj+d38eOMPdM8LuusKD44Xb0g7y2D9iQeG6XxIk9WkEZzuXEowb\n/Punvr+ULo0RSCTqAVvCD/WuQN9C6/5K8B/7TuDJCLYvkAkcEfbhG8GHRIG3gT8WzJjZkfvvfBC+\nIOiGgeCD6aNitttJ8C25QD1gdRjbFUXvEnD3TcAeMys4Cyl8NU89YG34bfsK/vch+xFwcThW0AL4\nWbg8E2hhZv0AzKxa2IaloRawzoIy77+IYPv92+RgDAcecvdcgu4xJ0jQSYf4fhJFSgQSiTeAJDPL\nJOibnglgZicRPK/1QXd/DqhkZpcVt31h7p5F0Pf+JkGX0dpCq0cBtSx4kPo8gvGKQ/V7YKiZpQEX\nA9cXs91rwEXhoO4x4TEnAV8B6yM4zpXAk+FgceHupkeBq81sLsGTrQq+eY8HVhJ88P8b+BzA3fcC\nPwceCmP+mqB7qzTcRvD7fBoe90C+BiqHg8sRX35qZq2Anu5e0PX0KMHf+CrCK5Akvqj6qIhIgtMZ\ngYhIglMiEBFJcEoEIiIJTolARCTBKRGIiCQ4JQIRkQSnRCAikuCUCEREEtz/A4C4OkTyNKdtAAAA\nAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10eb23ba8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "minx = int(taxa_de_mortalidade_infantil.min())\n",
+    "maxx = int(taxa_de_mortalidade_infantil.max())\n",
+    "x = np.array(range(minx, maxx + 5))\n",
+    "formula = \"{:f}*x+{:f}\".format(a, b)\n",
+    "eq = eval(formula)\n",
+    "\n",
+    "plt.plot(x, eq)\n",
+    "plt.plot(taxa_de_mortalidade_infantil, taxa_de_analfabetismo, 'ro')\n",
+    "plt.xlabel('Taxa de mortalidade infantil %')\n",
+    "plt.ylabel('Taxa de analfabetismo %')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
